syntax = "proto3";

package member;

// Member message definition
message Member {
  string id = 1;
  string first_name = 2;
  string last_name = 3;
  string email = 4;
  string phone = 5;
  string address = 6;
  string membership_type = 7;
  string membership_status = 8;
  string created_at = 9;
  string updated_at = 10;
}

// Create member request
message CreateMemberRequest {
  string first_name = 1;
  string last_name = 2;
  string email = 3;
  string phone = 4;
  string address = 5;
  string membership_type = 6;
}

// Update member request
message UpdateMemberRequest {
  string id = 1;
  string first_name = 2;
  string last_name = 3;
  string email = 4;
  string phone = 5;
  string address = 6;
  string membership_type = 7;
  string membership_status = 8;
}

// Get member request
message GetMemberRequest {
  string id = 1;
}

// List members request
message ListMembersRequest {
  int32 page = 1;
  int32 limit = 2;
  string search = 3;
  string membership_type = 4;
  string membership_status = 5;
}

// List members response
message ListMembersResponse {
  repeated Member members = 1;
  int32 total = 2;
  int32 page = 3;
  int32 limit = 4;
}

// Delete member request
message DeleteMemberRequest {
  string id = 1;
}

// Empty response
message Empty {}

// Member service definition
service MemberService {
  rpc CreateMember(CreateMemberRequest) returns (Member);
  rpc GetMember(GetMemberRequest) returns (Member);
  rpc ListMembers(ListMembersRequest) returns (ListMembersResponse);
  rpc UpdateMember(UpdateMemberRequest) returns (Member);
  rpc DeleteMember(DeleteMemberRequest) returns (Empty);
} 